--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,7 +5,11 @@
     <title>Document</title>
 </head>
 <body>
-    sss89989898989999
-    <!--<script src="../js/index.js" charset="UTF-8"></script>-->
+    <p>test1</p>
+    <p>test2</p>
+    <p>test3</p>
+    <p>test4</p>
+    <p>test5</p>
+    <script src="/js/index.js" charset="UTF-8"></script>
 </body>
 </html>
