--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+
 </head>
 <body>
-    <p>test1</p>
-    <p>test2</p>
-    <p>test3</p>
-    <p>test4</p>
-    <p>test5</p>
+<script src="localhost:35729/livereload.js?snipver=1"></script>
     <script src="/js/index.js" charset="UTF-8"></script>
 </body>
 </html>
